# cargo-magisk

./: Cargo.toml
src/: deploy.rs  main.rs  project.rs
src/config/: mod.rs  test.rs  toml_types.rs  version_code.rs
src/config/version_code/: test.rs
src/deploy/: mod.rs
src/project/: mod.rs  test.rs
