[package]
name = "cargo-magisk"
version = "0.1.0"
edition = "2024"

[package.metadata.magisk]
id = ""
name = ""
author = ""
assets = [{source = "target/cargo-magisk", dest = "system/bin/cargo-magisk"}]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.50", features = ["derive"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
